Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -158,7 +158,6 @@ footer.bk-footer h2 {
         .clearfix;
         z-index:1;
         ul {
-            float: right;
             li {
                 &.folder {
                     &:after {
